[gd_scene load_steps=30 format=3 uid="uid://bl20y7p4cuu0x"]

[ext_resource type="Script" path="res://Enemies/boss.gd" id="1_fs82c"]
[ext_resource type="Texture2D" uid="uid://bcqqek3ckf5ek" path="res://Art/Inimigos/Necromancer_creativekind-Sheet.png" id="2_7cm1p"]
[ext_resource type="PackedScene" uid="uid://0ewdkkjlagl2" path="res://Components/scenes/health_component.tscn" id="4_oqqfm"]
[ext_resource type="PackedScene" uid="uid://bo4pdtdxy3dff" path="res://Components/scenes/hurtbox_component.tscn" id="5_ncy6k"]
[ext_resource type="PackedScene" uid="uid://c22hhh4jjwjj0" path="res://Components/scenes/hitbox_component.tscn" id="6_4ck2r"]
[ext_resource type="Script" path="res://Components/Resources/hit_stats.gd" id="7_r0kb3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fn26t"]
atlas = ExtResource("2_7cm1p")
region = Rect2(0, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7a8f"]
atlas = ExtResource("2_7cm1p")
region = Rect2(160, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7qlc"]
atlas = ExtResource("2_7cm1p")
region = Rect2(320, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf7gq"]
atlas = ExtResource("2_7cm1p")
region = Rect2(480, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd8ac"]
atlas = ExtResource("2_7cm1p")
region = Rect2(640, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cujb1"]
atlas = ExtResource("2_7cm1p")
region = Rect2(800, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d41yc"]
atlas = ExtResource("2_7cm1p")
region = Rect2(960, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uenxg"]
atlas = ExtResource("2_7cm1p")
region = Rect2(1120, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1nny"]
atlas = ExtResource("2_7cm1p")
region = Rect2(0, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_13wtw"]
atlas = ExtResource("2_7cm1p")
region = Rect2(160, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpugt"]
atlas = ExtResource("2_7cm1p")
region = Rect2(320, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ve62"]
atlas = ExtResource("2_7cm1p")
region = Rect2(480, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3iv8"]
atlas = ExtResource("2_7cm1p")
region = Rect2(640, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_68rs7"]
atlas = ExtResource("2_7cm1p")
region = Rect2(800, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyx6"]
atlas = ExtResource("2_7cm1p")
region = Rect2(960, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_32kcg"]
atlas = ExtResource("2_7cm1p")
region = Rect2(1120, 128, 160, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ykk2w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn26t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7a8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7qlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf7gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd8ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cujb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d41yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uenxg")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1nny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13wtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpugt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ve62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3iv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68rs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32kcg")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_8itv0"]
offsets = PackedFloat32Array(0, 0.775758)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m2761"]
gradient = SubResource("Gradient_8itv0")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_igy62"]
radius = 15.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8cmuq"]
radius = 15.0
height = 40.0

[sub_resource type="Resource" id="Resource_5exh3"]
script = ExtResource("7_r0kb3")
damage = 3
damageType = 0
knockback = 0.0
cooldown = 0.0
can_damage = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_10w6e"]
radius = 15.0
height = 40.0

[node name="Boss" type="CharacterBody2D" groups=["enemy"]]
z_index = 2
collision_layer = 5
collision_mask = 3
script = ExtResource("1_fs82c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ykk2w")
animation = &"idle"
frame_progress = 0.316174

[node name="LuzOlhos1" type="PointLight2D" parent="AnimatedSprite2D"]
position = Vector2(1, 18)
scale = Vector2(1.33387, 0.943828)
color = Color(0.981995, 0.026014, 0.0482753, 1)
energy = 1.06
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_m2761")
height = 1.0

[node name="Marker2D" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(16.4706, 23.5294)
rotation = -0.261799

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(1, 23)
shape = SubResource("CapsuleShape2D_igy62")

[node name="HealthComponent" parent="." instance=ExtResource("4_oqqfm")]
position = Vector2(240.902, 134.942)
maxHealth = 5

[node name="HurtboxComponent" parent="." instance=ExtResource("5_ncy6k")]
light_mask = 2
visibility_layer = 2
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
light_mask = 3
visibility_layer = 3
position = Vector2(3, 24)
shape = SubResource("CapsuleShape2D_8cmuq")
debug_color = Color(0.829776, 0.335805, 0.538468, 0.42)

[node name="HitboxComponent" parent="." instance=ExtResource("6_4ck2r")]
collision_layer = 4
collision_mask = 2
hitStats = SubResource("Resource_5exh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(1, 24)
shape = SubResource("CapsuleShape2D_10w6e")

[node name="ShootSpeedTimer" type="Timer" parent="."]
